# watch-and-message

./: stack.yaml  watch-and-message.cabal
daemon/: Main.hs
src/System/: Watcher.hs
src/System/Watcher/: Announce.hs  CheckFiles.hs  Log.hs  MoveFiles.hs  OptionParser.hs  Types.hs  WatchFile.hs  WatchFiles.hs
