name: watch-and-message
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: tob@butter.sh
homepage: https://github.com/ibotty/watch-and-message
synopsis: Watches a directory and sends a Kafka message
description:
    Watches a directory, checks its content's sha256sum, optionally moves
    and announces on Kafka.
category: System
author: Tobias Florek

source-repository head
    type: git
    location: https://github.com/ibotty/watch-and-message.git

library
    exposed-modules:
        System.Watcher
        System.Watcher.Announce
        System.Watcher.CheckFiles
        System.Watcher.MoveFiles
        System.Watcher.WatchFiles
        System.Watcher.OptionParser
        System.Watcher.Types
        System.Watcher.Log
    build-depends:
        process,
        base >=4.8 && <4.9,
        linux-inotify >=0.3 && <0.4,
        milena >=0.6 && <0.7,
        turtle >=1.2.5 && <1.3,
        filepath,
        directory,
        text -any,
        exceptions -any,
        system-filepath -any,
        containers -any,
        logging-effect >=1.1 && <1.2,
        bytestring -any,
        optparse-applicative -any,
        transformers -any,
        wl-pprint-text -any,
        lifted-base -any,
        monad-control -any,
        transformers-base -any,
        time -any,
        aeson -any,
        mtl -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

executable watch-announce-daemon
    main-is: Main.hs
    build-depends:
        base -any,
        optparse-applicative -any,
        bytestring -any,
        logging-effect -any,
        turtle -any,
        watch-and-message -any,
        transformers -any,
        text -any,
        wl-pprint-text -any,
        directory -any,
        mtl -any,
        transformers-base -any,
        system-filepath -any,
        containers -any,
        monad-control -any,
        exceptions -any
    default-language: Haskell2010
    hs-source-dirs: daemon
    ghc-options: -Wall

